# detect-app

./: README.md  pyproject.toml
detect_app/: __init__.py
