[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["detect_app"]


[project]
name = "detect-app"
authors = [
    {name = "Hannes"},
]
description = "detect which app the python interpreter is running in"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["dcc", "app", "application", "pipeline"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]
#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/detect-app"